cabal-version: 1.12
name:          aziqfcqzmy-iqnacgdwjr-mcroybnavg
version:       0.0.0.0
license:       AllRightsReserved
build-type:    Simple

library
    default-language:   Haskell2010
    default-extensions:
        BlockArguments ConstraintKinds DeriveGeneric DerivingStrategies
        DataKinds FlexibleContexts FlexibleInstances GADTs
        GeneralizedNewtypeDeriving LambdaCase MultiParamTypeClasses
        MultiWayIf NamedFieldPuns NoImplicitPrelude
        NoMonomorphismRestriction OverloadedLabels OverloadedStrings
        QuasiQuotes RankNTypes RecordWildCards ScopedTypeVariables
        TemplateHaskell TupleSections TypeApplications TypeFamilies
        ViewPatterns

    ghc-options:
        -Wall -fwarn-tabs -Wincomplete-uni-patterns -eventlog -O0 +RTS
        -A32M -RTS

    build-depends:
        Diff -any,
        QuickCheck -any,
        aeson -any,
        aeson-better-errors -any,
        aeson-diff -any,
        aeson-pretty -any,
        aeson-qq -any,
        amazonka -any,
        amazonka-s3 -any,
        amqp -any,
        ansi-terminal -any,
        async -any,
        zvxosjlaim-rilcnymlpm-zokgocnrdo -any,
        avaleryar -any,
        base -any,
        bytestring -any,
        vghsvugwnc-sobhsxydmt-hbfuxwixxn -any,
        case-insensitive -any,
        cassava -any,
        classy-prelude -any,
        kdmjlflvld-otcdbxojlx-vvoxlaenkf -any,
        connection -any,
        containers -any,
        gqjhiyyqcx-rgghdzvqcm-urchzygimk -any,
        qivxmeiywc-jecrjyijco-tprliqfsfi -any,
        iudqbcujcd-ynukvjxgxw-nicdtugoxn -any,
        cryptonite -any,
        jyuidzkmwm-xyxsdmyakh-ahvfbxeaha -any,
        avvnstljbf-eqvbiqanvb-epetargzft -any,
        idgzpedoaf-dbfjwldocy-karcmrrnvw -any,
        directory -any,
        jcfinelkzr-qctedwphye-ssbamdyxuz -any,
        uslahbwpjb-vdtqwxhxnj-hiqltqwrnx -any,
        fjiwadmxge-aqjkxoqtiw-xcrotcqoci -any,
        uhstochqxx-jmscqnuokd-icqmvjaqaq -any,
        xromcygenl-gojypjrqvs-nycfeqojfd -any,
        exceptions -any,
        extra -any,
        file-embed -any,
        file-path-th -any,
        filepath -any,
        free -any,
        generic-lens -any,
        hashable -any,
        hedgehog -any,
        hspec-expectations -any,
        mbpugskatb-tiyjwpvxro-njveyigxha -any,
        http-api-data -any,
        http-client -any,
        http-client-tls -any,
        http-conduit -any,
        http-types -any,
        kqavalspcl-mjxvabybcy-rqybkwxafh -any,
        myyiorzlaw-ytvxbbmdpx-febkukndni -any,
        rsncqgtwnb-gxwvbahrpd-quhadaaeis -any,
        kan-extensions -any,
        amtcdurjli-uwlpznlrpv-utcmngyspj -any,
        ayqaodtiqr-lyoodcipiw-hvmfzfurzz -any,
        lens -any,
        lens-aeson -any,
        lifted-base -any,
        monad-control -any,
        monad-logger -any,
        crgtvuiocv-axtjsngogp-nermqbnorb -any,
        mtl -any,
        xtwihehity-ujcjqxvexa-mtrhiynzie -any,
        cykbpqjxqd-sblzneieby-ufuuzcgxxy -any,
        nebfuwggyx-gaktiktcnq-rarmqbnkzf -any,
        network-ip -any,
        network-uri -any,
        nonempty-containers -any,
        yqnzgbtjil-ajvkvudagy-yflacfcvwp -any,
        ifdcennmlo-islfnqxiqy-enzxaagooh -any,
        dxjifexidt-ceqgnulqjm-hyhfgxebyz -any,
        rgswdytbva-icqvrykamf-uigufjvtxz -any,
        postgresql-simple -any,
        postgresql-tx -any,
        postgresql-tx-query -any,
        prettyprinter -any,
        prettyprinter-ansi-terminal -any,
        random -any,
        ysovwneqof-htzfreipkt-avvjcvvcdp -any,
        tvlvjqkonn-jeasuqcexy-rbrpjulwgi -any,
        ldzbulfkvt-hofnssjwwf-zfzbqyxteu -any,
        uhdauwmvxd-nvcxoslsto-wmmmgnesij -any,
        rnxlejaloz-yuvvexhhzr-ivfpeumqge -any,
        jcegwdirei-vaumuhoxie-bcwqnqadzl -any,
        gtcvzcyrqh-fomvyfnmxq-bonfggbrvq -any,
        knlxweyfcf-ehyxlbsjov-czstiyephf -any,
        lnbsavfifx-jvkkyhijuo-mwztyrysqo -any,
        ehjuaeqivl-nzhhevcriz-kbvxylsitr -any,
        mgocxjmugg-szydfszzpd-rcfzbgiwzv -any,
        raw-strings-qq -any,
        rawstring-qm -any,
        recursion-schemes -any,
        refined -any,
        cabtqowckd-tkohzqixsj-umbwepqaep -any,
        jrqqfpuace-ckjryxrdrw-trllbleiex -any,
        wjcvquzmqj-ngmhegkhun-ozevzugvrv -any,
        rontohsvqd-kzkpimemzd-odglltphce -any,
        tqyksnesar-upekkbojzt-wueuynnzzh -any,
        resource-pool -any,
        civunfdiag-tziozhaunn-zdkpvlcwwa -any,
        zqlzfxaouu-ixmlfpdwfx-bvffwsusxw -any,
        safe-exceptions -any,
        scientific -any,
        kvnpbwtwcj-dwnjcoxcjx-rsrcmzkshx -any,
        servant -any,
        servant-cassava -any,
        servant-client -any,
        servant-client-core -any,
        jzkwdkcfrm-edzuwumizr-rgnvciqrvk -any,
        servant-flatten -any,
        irnnsxssyn-smvaxwghzf-nispjafufa -any,
        vhpkbpdaab-qgchccpiko-nbaihjjvlj -any,
        xmwnpwaspa-ifrscictqx-naqfoptqaq -any,
        bmnsexcmla-uhiigkzpho-fecljrnpui -any,
        blldacdoaq-nwjshzvehs-pernmdonjn -any,
        lbyeagpzai-mqklrvnslg-vtmfoaplrj -any,
        tupxqmyoqe-eamyawauun-xoeizboyfy -any,
        bulvlkdfna-dejoouyizu-hyaxeldtbf -any,
        nayaepihad-ahzciepdny-xqpqcpnvbv -any,
        zblnwvepip-kjvrtssncl-wemnlpzrof -any,
        ydtkotmgcp-azuxdknkyc-gvybvqjofg -any,
        wlwwrnkraj-hobpvmwqln-seaiuaziys -any,
        sdmemwqaef-zvyohazcxc-tfrypmqjyq -any,
        stm -any,
        streamly -any,
        tar -any,
        tasty -any,
        tasty-hedgehog -any,
        tasty-hunit -any,
        text -any,
        time -any,
        yeqzgwjcrl-ubgaozonrs-aabtyfwlqo -any,
        jfshhjnzly-ceduaieezo-gdfnfdxggr -any,
        annwckljmq-muyfsitolt-edoxonacun -any,
        transformers -any,
        tzdnwycbfe-eedgfzqujz-vdbfcumwyt -any,
        dyzkvuhlvz-hifjbbfevp-qcdwcazncr -any,
        unix -any,
        unliftio -any,
        unliftio-core -any,
        unordered-containers -any,
        uuid -any,
        vector -any,
        ihijfecmzj-ljxkhsaltz-tgoyvsagej -any,
        websockets -any,
        wl-pprint-text -any,
        wreq -any,
        writer-cps-mtl -any,
        yaml -any,
        yesod-core -any,
        zlib -any

executable fpeegcjuhu-uxvqacexop-pyqslbysvw
    main-is:            main.hs
    default-language:   Haskell2010
    default-extensions:
        BlockArguments ConstraintKinds DeriveGeneric DerivingStrategies
        DataKinds FlexibleContexts FlexibleInstances GADTs
        GeneralizedNewtypeDeriving LambdaCase MultiParamTypeClasses
        MultiWayIf NamedFieldPuns NoImplicitPrelude
        NoMonomorphismRestriction OverloadedLabels OverloadedStrings
        QuasiQuotes RankNTypes RecordWildCards ScopedTypeVariables
        TemplateHaskell TupleSections TypeApplications TypeFamilies
        ViewPatterns

    ghc-options:
        -Wall -fwarn-tabs -Wincomplete-uni-patterns -eventlog -O0 +RTS
        -A32M -RTS -threaded -rtsopts "-with-rtsopts=-N -T"

    build-depends:
        Diff -any,
        aeson -any,
        aeson-better-errors -any,
        aeson-diff -any,
        aeson-qq -any,
        amqp -any,
        ansi-terminal -any,
        aziqfcqzmy-iqnacgdwjr-mcroybnavg -any,
        async -any,
        zvxosjlaim-rilcnymlpm-zokgocnrdo -any,
        avaleryar -any,
        base -any,
        vghsvugwnc-sobhsxydmt-hbfuxwixxn -any,
        case-insensitive -any,
        cassava -any,
        classy-prelude -any,
        kdmjlflvld-otcdbxojlx-vvoxlaenkf -any,
        containers -any,
        gqjhiyyqcx-rgghdzvqcm-urchzygimk -any,
        qivxmeiywc-jecrjyijco-tprliqfsfi -any,
        iudqbcujcd-ynukvjxgxw-nicdtugoxn -any,
        cryptonite -any,
        jyuidzkmwm-xyxsdmyakh-ahvfbxeaha -any,
        avvnstljbf-eqvbiqanvb-epetargzft -any,
        idgzpedoaf-dbfjwldocy-karcmrrnvw -any,
        directory -any,
        jcfinelkzr-qctedwphye-ssbamdyxuz -any,
        uslahbwpjb-vdtqwxhxnj-hiqltqwrnx -any,
        fjiwadmxge-aqjkxoqtiw-xcrotcqoci -any,
        uhstochqxx-jmscqnuokd-icqmvjaqaq -any,
        xromcygenl-gojypjrqvs-nycfeqojfd -any,
        exceptions -any,
        extra -any,
        file-embed -any,
        filepath -any,
        free -any,
        generic-lens -any,
        hashable -any,
        hedgehog -any,
        hspec-expectations -any,
        mbpugskatb-tiyjwpvxro-njveyigxha -any,
        http-client -any,
        http-client-tls -any,
        http-conduit -any,
        http-types -any,
        kqavalspcl-mjxvabybcy-rqybkwxafh -any,
        myyiorzlaw-ytvxbbmdpx-febkukndni -any,
        rsncqgtwnb-gxwvbahrpd-quhadaaeis -any,
        kan-extensions -any,
        lens -any,
        lens-aeson -any,
        lifted-base -any,
        monad-logger -any,
        crgtvuiocv-axtjsngogp-nermqbnorb -any,
        mtl -any,
        xtwihehity-ujcjqxvexa-mtrhiynzie -any,
        cykbpqjxqd-sblzneieby-ufuuzcgxxy -any,
        nebfuwggyx-gaktiktcnq-rarmqbnkzf -any,
        network-ip -any,
        network-uri -any,
        nonempty-containers -any,
        yqnzgbtjil-ajvkvudagy-yflacfcvwp -any,
        ifdcennmlo-islfnqxiqy-enzxaagooh -any,
        dxjifexidt-ceqgnulqjm-hyhfgxebyz -any,
        rgswdytbva-icqvrykamf-uigufjvtxz -any,
        postgresql-tx -any,
        postgresql-tx-query -any,
        ysovwneqof-htzfreipkt-avvjcvvcdp -any,
        rnxlejaloz-yuvvexhhzr-ivfpeumqge -any,
        gtcvzcyrqh-fomvyfnmxq-bonfggbrvq -any,
        knlxweyfcf-ehyxlbsjov-czstiyephf -any,
        lnbsavfifx-jvkkyhijuo-mwztyrysqo -any,
        ehjuaeqivl-nzhhevcriz-kbvxylsitr -any,
        mgocxjmugg-szydfszzpd-rcfzbgiwzv -any,
        rawstring-qm -any,
        recursion-schemes -any,
        cabtqowckd-tkohzqixsj-umbwepqaep -any,
        jrqqfpuace-ckjryxrdrw-trllbleiex -any,
        wjcvquzmqj-ngmhegkhun-ozevzugvrv -any,
        civunfdiag-tziozhaunn-zdkpvlcwwa -any,
        zqlzfxaouu-ixmlfpdwfx-bvffwsusxw -any,
        safe-exceptions -any,
        kvnpbwtwcj-dwnjcoxcjx-rsrcmzkshx -any,
        vhpkbpdaab-qgchccpiko-nbaihjjvlj -any,
        xmwnpwaspa-ifrscictqx-naqfoptqaq -any,
        bmnsexcmla-uhiigkzpho-fecljrnpui -any,
        blldacdoaq-nwjshzvehs-pernmdonjn -any,
        lbyeagpzai-mqklrvnslg-vtmfoaplrj -any,
        tupxqmyoqe-eamyawauun-xoeizboyfy -any,
        bulvlkdfna-dejoouyizu-hyaxeldtbf -any,
        nayaepihad-ahzciepdny-xqpqcpnvbv -any,
        zblnwvepip-kjvrtssncl-wemnlpzrof -any,
        ydtkotmgcp-azuxdknkyc-gvybvqjofg -any,
        wlwwrnkraj-hobpvmwqln-seaiuaziys -any,
        opmzrinbix-dwnjuztviv-lhnefavumr -any,
        stm -any,
        streamly -any,
        tar -any,
        tasty -any,
        tasty-hedgehog -any,
        tasty-hunit -any,
        text -any,
        time -any,
        yeqzgwjcrl-ubgaozonrs-aabtyfwlqo -any,
        jfshhjnzly-ceduaieezo-gdfnfdxggr -any,
        annwckljmq-muyfsitolt-edoxonacun -any,
        transformers -any,
        tzdnwycbfe-eedgfzqujz-vdbfcumwyt -any,
        dyzkvuhlvz-hifjbbfevp-qcdwcazncr -any,
        unix -any,
        unliftio -any,
        unliftio-core -any,
        vector -any,
        ihijfecmzj-ljxkhsaltz-tgoyvsagej -any,
        websockets -any,
        wl-pprint-text -any,
        wreq -any,
        writer-cps-mtl -any,
        yaml -any,
        yesod-core -any,
        zlib -any

executable twxfhpvkhm-mifolisslg-nrctalplqz
    main-is:            main.hs
    default-language:   Haskell2010
    default-extensions:
        BlockArguments ConstraintKinds DeriveGeneric DerivingStrategies
        DataKinds FlexibleContexts FlexibleInstances GADTs
        GeneralizedNewtypeDeriving LambdaCase MultiParamTypeClasses
        MultiWayIf NamedFieldPuns NoImplicitPrelude
        NoMonomorphismRestriction OverloadedLabels OverloadedStrings
        QuasiQuotes RankNTypes RecordWildCards ScopedTypeVariables
        TemplateHaskell TupleSections TypeApplications TypeFamilies
        ViewPatterns

    ghc-options:
        -Wall -fwarn-tabs -Wincomplete-uni-patterns -eventlog -O0 +RTS
        -A32M -RTS

    build-depends:
        Diff -any,
        aeson -any,
        aeson-better-errors -any,
        aeson-diff -any,
        aeson-qq -any,
        amqp -any,
        ansi-terminal -any,
        aziqfcqzmy-iqnacgdwjr-mcroybnavg -any,
        async -any,
        zvxosjlaim-rilcnymlpm-zokgocnrdo -any,
        avaleryar -any,
        base -any,
        vghsvugwnc-sobhsxydmt-hbfuxwixxn -any,
        case-insensitive -any,
        cassava -any,
        classy-prelude -any,
        kdmjlflvld-otcdbxojlx-vvoxlaenkf -any,
        containers -any,
        gqjhiyyqcx-rgghdzvqcm-urchzygimk -any,
        qivxmeiywc-jecrjyijco-tprliqfsfi -any,
        iudqbcujcd-ynukvjxgxw-nicdtugoxn -any,
        cryptonite -any,
        jyuidzkmwm-xyxsdmyakh-ahvfbxeaha -any,
        avvnstljbf-eqvbiqanvb-epetargzft -any,
        idgzpedoaf-dbfjwldocy-karcmrrnvw -any,
        directory -any,
        jcfinelkzr-qctedwphye-ssbamdyxuz -any,
        uslahbwpjb-vdtqwxhxnj-hiqltqwrnx -any,
        fjiwadmxge-aqjkxoqtiw-xcrotcqoci -any,
        uhstochqxx-jmscqnuokd-icqmvjaqaq -any,
        xromcygenl-gojypjrqvs-nycfeqojfd -any,
        exceptions -any,
        extra -any,
        file-embed -any,
        filepath -any,
        free -any,
        generic-lens -any,
        hashable -any,
        hedgehog -any,
        hspec-expectations -any,
        mbpugskatb-tiyjwpvxro-njveyigxha -any,
        http-client -any,
        http-client-tls -any,
        http-conduit -any,
        http-types -any,
        kqavalspcl-mjxvabybcy-rqybkwxafh -any,
        myyiorzlaw-ytvxbbmdpx-febkukndni -any,
        rsncqgtwnb-gxwvbahrpd-quhadaaeis -any,
        kan-extensions -any,
        lens -any,
        lens-aeson -any,
        lifted-base -any,
        monad-logger -any,
        crgtvuiocv-axtjsngogp-nermqbnorb -any,
        mtl -any,
        xtwihehity-ujcjqxvexa-mtrhiynzie -any,
        cykbpqjxqd-sblzneieby-ufuuzcgxxy -any,
        nebfuwggyx-gaktiktcnq-rarmqbnkzf -any,
        network-ip -any,
        network-uri -any,
        nonempty-containers -any,
        yqnzgbtjil-ajvkvudagy-yflacfcvwp -any,
        ifdcennmlo-islfnqxiqy-enzxaagooh -any,
        dxjifexidt-ceqgnulqjm-hyhfgxebyz -any,
        rgswdytbva-icqvrykamf-uigufjvtxz -any,
        postgresql-tx -any,
        postgresql-tx-query -any,
        ysovwneqof-htzfreipkt-avvjcvvcdp -any,
        tvlvjqkonn-jeasuqcexy-rbrpjulwgi -any,
        rnxlejaloz-yuvvexhhzr-ivfpeumqge -any,
        gtcvzcyrqh-fomvyfnmxq-bonfggbrvq -any,
        knlxweyfcf-ehyxlbsjov-czstiyephf -any,
        lnbsavfifx-jvkkyhijuo-mwztyrysqo -any,
        ehjuaeqivl-nzhhevcriz-kbvxylsitr -any,
        mgocxjmugg-szydfszzpd-rcfzbgiwzv -any,
        rawstring-qm -any,
        recursion-schemes -any,
        cabtqowckd-tkohzqixsj-umbwepqaep -any,
        jrqqfpuace-ckjryxrdrw-trllbleiex -any,
        wjcvquzmqj-ngmhegkhun-ozevzugvrv -any,
        civunfdiag-tziozhaunn-zdkpvlcwwa -any,
        zqlzfxaouu-ixmlfpdwfx-bvffwsusxw -any,
        safe-exceptions -any,
        kvnpbwtwcj-dwnjcoxcjx-rsrcmzkshx -any,
        vhpkbpdaab-qgchccpiko-nbaihjjvlj -any,
        xmwnpwaspa-ifrscictqx-naqfoptqaq -any,
        bmnsexcmla-uhiigkzpho-fecljrnpui -any,
        blldacdoaq-nwjshzvehs-pernmdonjn -any,
        lbyeagpzai-mqklrvnslg-vtmfoaplrj -any,
        tupxqmyoqe-eamyawauun-xoeizboyfy -any,
        bulvlkdfna-dejoouyizu-hyaxeldtbf -any,
        nayaepihad-ahzciepdny-xqpqcpnvbv -any,
        zblnwvepip-kjvrtssncl-wemnlpzrof -any,
        ydtkotmgcp-azuxdknkyc-gvybvqjofg -any,
        wlwwrnkraj-hobpvmwqln-seaiuaziys -any,
        stm -any,
        streamly -any,
        tar -any,
        tasty -any,
        tasty-hedgehog -any,
        tasty-hunit -any,
        text -any,
        time -any,
        yeqzgwjcrl-ubgaozonrs-aabtyfwlqo -any,
        jfshhjnzly-ceduaieezo-gdfnfdxggr -any,
        annwckljmq-muyfsitolt-edoxonacun -any,
        transformers -any,
        tzdnwycbfe-eedgfzqujz-vdbfcumwyt -any,
        dyzkvuhlvz-hifjbbfevp-qcdwcazncr -any,
        unix -any,
        unliftio -any,
        unliftio-core -any,
        vector -any,
        ihijfecmzj-ljxkhsaltz-tgoyvsagej -any,
        websockets -any,
        wl-pprint-text -any,
        wreq -any,
        writer-cps-mtl -any,
        yaml -any,
        yesod-core -any,
        zlib -any

benchmark drlnxbmddo-riqmsghevg-jbajcjuwcg
    type:               exitcode-stdio-1.0
    main-is:            main.hs
    default-language:   Haskell2010
    default-extensions:
        BlockArguments ConstraintKinds DeriveGeneric DerivingStrategies
        DataKinds FlexibleContexts FlexibleInstances GADTs
        GeneralizedNewtypeDeriving LambdaCase MultiParamTypeClasses
        MultiWayIf NamedFieldPuns NoImplicitPrelude
        NoMonomorphismRestriction OverloadedLabels OverloadedStrings
        QuasiQuotes RankNTypes RecordWildCards ScopedTypeVariables
        TemplateHaskell TupleSections TypeApplications TypeFamilies
        ViewPatterns

    ghc-options:
        -Wall -fwarn-tabs -Wincomplete-uni-patterns -eventlog -O0 +RTS
        -A32M -RTS -threaded -rtsopts "-with-rtsopts=-N -T"

    build-depends:
        Diff -any,
        aeson -any,
        aeson-better-errors -any,
        aeson-diff -any,
        aeson-qq -any,
        amqp -any,
        ansi-terminal -any,
        aziqfcqzmy-iqnacgdwjr-mcroybnavg -any,
        async -any,
        zvxosjlaim-rilcnymlpm-zokgocnrdo -any,
        avaleryar -any,
        base -any,
        vghsvugwnc-sobhsxydmt-hbfuxwixxn -any,
        case-insensitive -any,
        cassava -any,
        classy-prelude -any,
        kdmjlflvld-otcdbxojlx-vvoxlaenkf -any,
        containers -any,
        gqjhiyyqcx-rgghdzvqcm-urchzygimk -any,
        qivxmeiywc-jecrjyijco-tprliqfsfi -any,
        iudqbcujcd-ynukvjxgxw-nicdtugoxn -any,
        criterion -any,
        cryptonite -any,
        jyuidzkmwm-xyxsdmyakh-ahvfbxeaha -any,
        avvnstljbf-eqvbiqanvb-epetargzft -any,
        idgzpedoaf-dbfjwldocy-karcmrrnvw -any,
        directory -any,
        jcfinelkzr-qctedwphye-ssbamdyxuz -any,
        uslahbwpjb-vdtqwxhxnj-hiqltqwrnx -any,
        fjiwadmxge-aqjkxoqtiw-xcrotcqoci -any,
        uhstochqxx-jmscqnuokd-icqmvjaqaq -any,
        xromcygenl-gojypjrqvs-nycfeqojfd -any,
        exceptions -any,
        extra -any,
        file-embed -any,
        filepath -any,
        free -any,
        generic-lens -any,
        hashable -any,
        hedgehog -any,
        hspec-expectations -any,
        mbpugskatb-tiyjwpvxro-njveyigxha -any,
        http-client -any,
        http-client-tls -any,
        http-conduit -any,
        http-types -any,
        kqavalspcl-mjxvabybcy-rqybkwxafh -any,
        myyiorzlaw-ytvxbbmdpx-febkukndni -any,
        rsncqgtwnb-gxwvbahrpd-quhadaaeis -any,
        kan-extensions -any,
        ayqaodtiqr-lyoodcipiw-hvmfzfurzz -any,
        lens -any,
        lens-aeson -any,
        lifted-base -any,
        monad-logger -any,
        crgtvuiocv-axtjsngogp-nermqbnorb -any,
        mtl -any,
        xtwihehity-ujcjqxvexa-mtrhiynzie -any,
        cykbpqjxqd-sblzneieby-ufuuzcgxxy -any,
        nebfuwggyx-gaktiktcnq-rarmqbnkzf -any,
        network-ip -any,
        network-uri -any,
        nonempty-containers -any,
        yqnzgbtjil-ajvkvudagy-yflacfcvwp -any,
        ifdcennmlo-islfnqxiqy-enzxaagooh -any,
        dxjifexidt-ceqgnulqjm-hyhfgxebyz -any,
        rgswdytbva-icqvrykamf-uigufjvtxz -any,
        postgresql-tx -any,
        postgresql-tx-query -any,
        random -any,
        ysovwneqof-htzfreipkt-avvjcvvcdp -any,
        tvlvjqkonn-jeasuqcexy-rbrpjulwgi -any,
        rnxlejaloz-yuvvexhhzr-ivfpeumqge -any,
        gtcvzcyrqh-fomvyfnmxq-bonfggbrvq -any,
        knlxweyfcf-ehyxlbsjov-czstiyephf -any,
        lnbsavfifx-jvkkyhijuo-mwztyrysqo -any,
        ehjuaeqivl-nzhhevcriz-kbvxylsitr -any,
        mgocxjmugg-szydfszzpd-rcfzbgiwzv -any,
        rawstring-qm -any,
        recursion-schemes -any,
        cabtqowckd-tkohzqixsj-umbwepqaep -any,
        jrqqfpuace-ckjryxrdrw-trllbleiex -any,
        wjcvquzmqj-ngmhegkhun-ozevzugvrv -any,
        civunfdiag-tziozhaunn-zdkpvlcwwa -any,
        zqlzfxaouu-ixmlfpdwfx-bvffwsusxw -any,
        safe-exceptions -any,
        kvnpbwtwcj-dwnjcoxcjx-rsrcmzkshx -any,
        vhpkbpdaab-qgchccpiko-nbaihjjvlj -any,
        xmwnpwaspa-ifrscictqx-naqfoptqaq -any,
        bmnsexcmla-uhiigkzpho-fecljrnpui -any,
        blldacdoaq-nwjshzvehs-pernmdonjn -any,
        lbyeagpzai-mqklrvnslg-vtmfoaplrj -any,
        tupxqmyoqe-eamyawauun-xoeizboyfy -any,
        bulvlkdfna-dejoouyizu-hyaxeldtbf -any,
        nayaepihad-ahzciepdny-xqpqcpnvbv -any,
        zblnwvepip-kjvrtssncl-wemnlpzrof -any,
        ydtkotmgcp-azuxdknkyc-gvybvqjofg -any,
        wlwwrnkraj-hobpvmwqln-seaiuaziys -any,
        stm -any,
        streamly -any,
        tar -any,
        tasty -any,
        tasty-hedgehog -any,
        tasty-hunit -any,
        text -any,
        time -any,
        yeqzgwjcrl-ubgaozonrs-aabtyfwlqo -any,
        jfshhjnzly-ceduaieezo-gdfnfdxggr -any,
        annwckljmq-muyfsitolt-edoxonacun -any,
        transformers -any,
        tzdnwycbfe-eedgfzqujz-vdbfcumwyt -any,
        dyzkvuhlvz-hifjbbfevp-qcdwcazncr -any,
        unix -any,
        unliftio -any,
        unliftio-core -any,
        vector -any,
        ihijfecmzj-ljxkhsaltz-tgoyvsagej -any,
        websockets -any,
        wl-pprint-text -any,
        wreq -any,
        writer-cps-mtl -any,
        yaml -any,
        yesod-core -any,
        zlib -any

benchmark aarrwtnaou-rrmzxdqpxy-xhmoskbrxs
    type:               exitcode-stdio-1.0
    main-is:            main.hs
    default-language:   Haskell2010
    default-extensions:
        BlockArguments ConstraintKinds DeriveGeneric DerivingStrategies
        DataKinds FlexibleContexts FlexibleInstances GADTs
        GeneralizedNewtypeDeriving LambdaCase MultiParamTypeClasses
        MultiWayIf NamedFieldPuns NoImplicitPrelude
        NoMonomorphismRestriction OverloadedLabels OverloadedStrings
        QuasiQuotes RankNTypes RecordWildCards ScopedTypeVariables
        TemplateHaskell TupleSections TypeApplications TypeFamilies
        ViewPatterns

    ghc-options:
        -Wall -fwarn-tabs -Wincomplete-uni-patterns -eventlog -O0 +RTS
        -A32M -RTS -threaded -rtsopts "-with-rtsopts=-N -T"

    build-depends:
        Diff -any,
        aeson -any,
        aeson-better-errors -any,
        aeson-diff -any,
        aeson-qq -any,
        amqp -any,
        ansi-terminal -any,
        aziqfcqzmy-iqnacgdwjr-mcroybnavg -any,
        async -any,
        zvxosjlaim-rilcnymlpm-zokgocnrdo -any,
        avaleryar -any,
        base -any,
        vghsvugwnc-sobhsxydmt-hbfuxwixxn -any,
        case-insensitive -any,
        cassava -any,
        classy-prelude -any,
        kdmjlflvld-otcdbxojlx-vvoxlaenkf -any,
        containers -any,
        gqjhiyyqcx-rgghdzvqcm-urchzygimk -any,
        qivxmeiywc-jecrjyijco-tprliqfsfi -any,
        iudqbcujcd-ynukvjxgxw-nicdtugoxn -any,
        criterion -any,
        cryptonite -any,
        jyuidzkmwm-xyxsdmyakh-ahvfbxeaha -any,
        avvnstljbf-eqvbiqanvb-epetargzft -any,
        idgzpedoaf-dbfjwldocy-karcmrrnvw -any,
        directory -any,
        jcfinelkzr-qctedwphye-ssbamdyxuz -any,
        uslahbwpjb-vdtqwxhxnj-hiqltqwrnx -any,
        fjiwadmxge-aqjkxoqtiw-xcrotcqoci -any,
        uhstochqxx-jmscqnuokd-icqmvjaqaq -any,
        xromcygenl-gojypjrqvs-nycfeqojfd -any,
        exceptions -any,
        extra -any,
        file-embed -any,
        filepath -any,
        free -any,
        generic-lens -any,
        hashable -any,
        hedgehog -any,
        hspec-expectations -any,
        mbpugskatb-tiyjwpvxro-njveyigxha -any,
        http-client -any,
        http-client-tls -any,
        http-conduit -any,
        http-types -any,
        kqavalspcl-mjxvabybcy-rqybkwxafh -any,
        myyiorzlaw-ytvxbbmdpx-febkukndni -any,
        rsncqgtwnb-gxwvbahrpd-quhadaaeis -any,
        kan-extensions -any,
        ayqaodtiqr-lyoodcipiw-hvmfzfurzz -any,
        lens -any,
        lens-aeson -any,
        lifted-base -any,
        monad-control -any,
        monad-logger -any,
        crgtvuiocv-axtjsngogp-nermqbnorb -any,
        mtl -any,
        xtwihehity-ujcjqxvexa-mtrhiynzie -any,
        cykbpqjxqd-sblzneieby-ufuuzcgxxy -any,
        nebfuwggyx-gaktiktcnq-rarmqbnkzf -any,
        network-ip -any,
        network-uri -any,
        nonempty-containers -any,
        yqnzgbtjil-ajvkvudagy-yflacfcvwp -any,
        ifdcennmlo-islfnqxiqy-enzxaagooh -any,
        dxjifexidt-ceqgnulqjm-hyhfgxebyz -any,
        rgswdytbva-icqvrykamf-uigufjvtxz -any,
        postgresql-tx -any,
        postgresql-tx-query -any,
        random -any,
        ysovwneqof-htzfreipkt-avvjcvvcdp -any,
        tvlvjqkonn-jeasuqcexy-rbrpjulwgi -any,
        rnxlejaloz-yuvvexhhzr-ivfpeumqge -any,
        gtcvzcyrqh-fomvyfnmxq-bonfggbrvq -any,
        knlxweyfcf-ehyxlbsjov-czstiyephf -any,
        lnbsavfifx-jvkkyhijuo-mwztyrysqo -any,
        ehjuaeqivl-nzhhevcriz-kbvxylsitr -any,
        mgocxjmugg-szydfszzpd-rcfzbgiwzv -any,
        rawstring-qm -any,
        recursion-schemes -any,
        cabtqowckd-tkohzqixsj-umbwepqaep -any,
        jrqqfpuace-ckjryxrdrw-trllbleiex -any,
        wjcvquzmqj-ngmhegkhun-ozevzugvrv -any,
        civunfdiag-tziozhaunn-zdkpvlcwwa -any,
        zqlzfxaouu-ixmlfpdwfx-bvffwsusxw -any,
        safe-exceptions -any,
        kvnpbwtwcj-dwnjcoxcjx-rsrcmzkshx -any,
        vhpkbpdaab-qgchccpiko-nbaihjjvlj -any,
        xmwnpwaspa-ifrscictqx-naqfoptqaq -any,
        bmnsexcmla-uhiigkzpho-fecljrnpui -any,
        blldacdoaq-nwjshzvehs-pernmdonjn -any,
        lbyeagpzai-mqklrvnslg-vtmfoaplrj -any,
        tupxqmyoqe-eamyawauun-xoeizboyfy -any,
        bulvlkdfna-dejoouyizu-hyaxeldtbf -any,
        nayaepihad-ahzciepdny-xqpqcpnvbv -any,
        zblnwvepip-kjvrtssncl-wemnlpzrof -any,
        ydtkotmgcp-azuxdknkyc-gvybvqjofg -any,
        wlwwrnkraj-hobpvmwqln-seaiuaziys -any,
        stm -any,
        streamly -any,
        tar -any,
        tasty -any,
        tasty-hedgehog -any,
        tasty-hunit -any,
        text -any,
        time -any,
        yeqzgwjcrl-ubgaozonrs-aabtyfwlqo -any,
        jfshhjnzly-ceduaieezo-gdfnfdxggr -any,
        annwckljmq-muyfsitolt-edoxonacun -any,
        transformers -any,
        tzdnwycbfe-eedgfzqujz-vdbfcumwyt -any,
        dyzkvuhlvz-hifjbbfevp-qcdwcazncr -any,
        unix -any,
        unliftio -any,
        unliftio-core -any,
        vector -any,
        ihijfecmzj-ljxkhsaltz-tgoyvsagej -any,
        websockets -any,
        wl-pprint-text -any,
        wreq -any,
        writer-cps-mtl -any,
        yaml -any,
        yesod-core -any,
        zlib -any
