cabal-version: 1.12
name:          bartgulhih-fvuwxcitsk-foqrmqxrka
version:       0.0.0.0
license:       AllRightsReserved
build-type:    Simple

library
    default-language:   Haskell2010
    default-extensions:
        CPP ConstraintKinds DataKinds DeriveDataTypeable DeriveGeneric
        DerivingStrategies DerivingVia EmptyDataDecls FlexibleContexts
        FlexibleInstances FunctionalDependencies GADTs
        GeneralizedNewtypeDeriving InstanceSigs LambdaCase
        MultiParamTypeClasses MultiWayIf NamedFieldPuns NoImplicitPrelude
        NoMonomorphismRestriction OverloadedStrings PackageImports
        PatternSynonyms QuasiQuotes RankNTypes RecordWildCards
        ScopedTypeVariables StandaloneDeriving TemplateHaskell
        TupleSections TypeApplications TypeFamilies TypeOperators
        ViewPatterns

    ghc-options:
        -Wall -fwarn-tabs -Wincomplete-uni-patterns -eventlog -O0 +RTS
        -A32M -RTS

    build-depends:
        aeson -any,
        aeson-better-errors -any,
        base -any,
        base64-bytestring -any,
        blaze-markup -any,
        case-insensitive -any,
        casing -any,
        classy-prelude -any,
        clock -any,
        kdmjlflvld-otcdbxojlx-vvoxlaenkf -any,
        conduit -any,
        containers -any,
        cryptonite -any,
        data-default -any,
        dlist -any,
        either -any,
        ekg -any,
        ekg-core -any,
        xromcygenl-gojypjrqvs-nycfeqojfd -any,
        extra -any,
        fast-logger -any,
        file-embed -any,
        file-path-th -any,
        generic-lens -any,
        http-client -any,
        http-conduit -any,
        http-types -any,
        jose-jwt -any,
        kqavalspcl-mjxvabybcy-rqybkwxafh -any,
        rsncqgtwnb-gxwvbahrpd-quhadaaeis -any,
        lattices -any,
        lens -any,
        lens-aeson -any,
        ctinvzdtjm-hfchrxvxxm-gpgeiyxotj -any,
        memory -any,
        mime-mail -any,
        mmorph -any,
        monad-control -any,
        monad-logger -any,
        mtl -any,
        xtwihehity-ujcjqxvexa-mtrhiynzie -any,
        cykbpqjxqd-sblzneieby-ufuuzcgxxy -any,
        mustache -any,
        network -any,
        yqnzgbtjil-ajvkvudagy-yflacfcvwp -any,
        postgresql-config -any,
        postgresql-simple -any,
        servant -any,
        servant-client -any,
        servant-server -any,
        xmwnpwaspa-ifrscictqx-naqfoptqaq -any,
        blldacdoaq-nwjshzvehs-pernmdonjn -any,
        lbyeagpzai-mqklrvnslg-vtmfoaplrj -any,
        lklojpplmm-gahraeiacr-nburlworaj -any,
        sdmemwqaef-zvyohazcxc-tfrypmqjyq -any,
        gkjuhkyyqj-jozfvwcjya-gxibjpvgiy -any,
        stm-conduit -any,
        template-haskell -any,
        text -any,
        text-show -any,
        time -any,
        transformers -any,
        unliftio -any,
        unordered-containers -any,
        vector -any,
        wai -any,
        wai-extra -any,
        gqneousnmf-mnqkugguei-kcgvtbvdhv -any,
        gymqqiksln-ycqlesvmbu-mrzmpdrmlm -any,
        ihijfecmzj-ljxkhsaltz-tgoyvsagej -any,
        vbltcnoepb-bhzritxypd-erpaaootbj -any,
        warp -any,
        writer-cps-mtl -any,
        yaml -any,
        yesod -any,
        yesod-core -any,
        yesod-websockets -any

executable vreztkdfak-xbjnenwqun-jexdqribma
    main-is:            main.hs
    default-language:   Haskell2010
    default-extensions:
        CPP ConstraintKinds DataKinds DeriveDataTypeable DeriveGeneric
        DerivingStrategies DerivingVia EmptyDataDecls FlexibleContexts
        FlexibleInstances FunctionalDependencies GADTs
        GeneralizedNewtypeDeriving InstanceSigs LambdaCase
        MultiParamTypeClasses MultiWayIf NamedFieldPuns NoImplicitPrelude
        NoMonomorphismRestriction OverloadedStrings PackageImports
        PatternSynonyms QuasiQuotes RankNTypes RecordWildCards
        ScopedTypeVariables StandaloneDeriving TemplateHaskell
        TupleSections TypeApplications TypeFamilies TypeOperators
        ViewPatterns

    ghc-options:
        -Wall -fwarn-tabs -Wincomplete-uni-patterns -eventlog -O0 +RTS
        -A32M -RTS -threaded -rtsopts "-with-rtsopts=-N -T"

    build-depends:
        aeson -any,
        aeson-better-errors -any,
        base -any,
        base64-bytestring -any,
        blaze-markup -any,
        case-insensitive -any,
        casing -any,
        classy-prelude -any,
        clock -any,
        kdmjlflvld-otcdbxojlx-vvoxlaenkf -any,
        conduit -any,
        containers -any,
        cryptonite -any,
        data-default -any,
        dlist -any,
        either -any,
        ekg -any,
        ekg-core -any,
        xromcygenl-gojypjrqvs-nycfeqojfd -any,
        extra -any,
        fast-logger -any,
        file-embed -any,
        file-path-th -any,
        generic-lens -any,
        http-client -any,
        http-conduit -any,
        http-types -any,
        jose-jwt -any,
        kqavalspcl-mjxvabybcy-rqybkwxafh -any,
        rsncqgtwnb-gxwvbahrpd-quhadaaeis -any,
        lattices -any,
        lens -any,
        lens-aeson -any,
        ctinvzdtjm-hfchrxvxxm-gpgeiyxotj -any,
        memory -any,
        mime-mail -any,
        mmorph -any,
        monad-control -any,
        monad-logger -any,
        mtl -any,
        xtwihehity-ujcjqxvexa-mtrhiynzie -any,
        cykbpqjxqd-sblzneieby-ufuuzcgxxy -any,
        mustache -any,
        network -any,
        yqnzgbtjil-ajvkvudagy-yflacfcvwp -any,
        postgresql-config -any,
        postgresql-simple -any,
        servant -any,
        servant-client -any,
        servant-server -any,
        xmwnpwaspa-ifrscictqx-naqfoptqaq -any,
        blldacdoaq-nwjshzvehs-pernmdonjn -any,
        lbyeagpzai-mqklrvnslg-vtmfoaplrj -any,
        lklojpplmm-gahraeiacr-nburlworaj -any,
        sdmemwqaef-zvyohazcxc-tfrypmqjyq -any,
        gkjuhkyyqj-jozfvwcjya-gxibjpvgiy -any,
        stm-conduit -any,
        template-haskell -any,
        text -any,
        text-show -any,
        time -any,
        transformers -any,
        unliftio -any,
        unordered-containers -any,
        vector -any,
        wai -any,
        wai-extra -any,
        bartgulhih-fvuwxcitsk-foqrmqxrka -any,
        gqneousnmf-mnqkugguei-kcgvtbvdhv -any,
        gymqqiksln-ycqlesvmbu-mrzmpdrmlm -any,
        ihijfecmzj-ljxkhsaltz-tgoyvsagej -any,
        vbltcnoepb-bhzritxypd-erpaaootbj -any,
        warp -any,
        writer-cps-mtl -any,
        yaml -any,
        yesod -any,
        yesod-core -any,
        yesod-websockets -any

executable iqgkcpxbsx-zmhyxzlhsd-yixsdlnqkm
    main-is:            main.hs
    default-language:   Haskell2010
    default-extensions:
        CPP ConstraintKinds DataKinds DeriveDataTypeable DeriveGeneric
        DerivingStrategies DerivingVia EmptyDataDecls FlexibleContexts
        FlexibleInstances FunctionalDependencies GADTs
        GeneralizedNewtypeDeriving InstanceSigs LambdaCase
        MultiParamTypeClasses MultiWayIf NamedFieldPuns NoImplicitPrelude
        NoMonomorphismRestriction OverloadedStrings PackageImports
        PatternSynonyms QuasiQuotes RankNTypes RecordWildCards
        ScopedTypeVariables StandaloneDeriving TemplateHaskell
        TupleSections TypeApplications TypeFamilies TypeOperators
        ViewPatterns

    ghc-options:
        -Wall -fwarn-tabs -Wincomplete-uni-patterns -eventlog -O0 +RTS
        -A32M -RTS -threaded -rtsopts "-with-rtsopts=-N -T"

    build-depends:
        aeson -any,
        aeson-better-errors -any,
        base -any,
        base64-bytestring -any,
        blaze-markup -any,
        case-insensitive -any,
        casing -any,
        classy-prelude -any,
        clock -any,
        kdmjlflvld-otcdbxojlx-vvoxlaenkf -any,
        conduit -any,
        containers -any,
        cryptonite -any,
        data-default -any,
        dlist -any,
        either -any,
        ekg -any,
        ekg-core -any,
        xromcygenl-gojypjrqvs-nycfeqojfd -any,
        extra -any,
        fast-logger -any,
        file-embed -any,
        file-path-th -any,
        generic-lens -any,
        hspec -any,
        hspec-core -any,
        hspec-expectations -any,
        http-client -any,
        http-conduit -any,
        http-types -any,
        jose-jwt -any,
        kqavalspcl-mjxvabybcy-rqybkwxafh -any,
        rsncqgtwnb-gxwvbahrpd-quhadaaeis -any,
        wrsxalzuux-fkrmnzenbw-mlawexhwxe -any,
        lattices -any,
        lens -any,
        lens-aeson -any,
        ctinvzdtjm-hfchrxvxxm-gpgeiyxotj -any,
        memory -any,
        mime-mail -any,
        mmorph -any,
        monad-control -any,
        monad-logger -any,
        mtl -any,
        xtwihehity-ujcjqxvexa-mtrhiynzie -any,
        cykbpqjxqd-sblzneieby-ufuuzcgxxy -any,
        mustache -any,
        network -any,
        yqnzgbtjil-ajvkvudagy-yflacfcvwp -any,
        postgresql-config -any,
        postgresql-simple -any,
        servant -any,
        servant-client -any,
        servant-server -any,
        xmwnpwaspa-ifrscictqx-naqfoptqaq -any,
        blldacdoaq-nwjshzvehs-pernmdonjn -any,
        lbyeagpzai-mqklrvnslg-vtmfoaplrj -any,
        lklojpplmm-gahraeiacr-nburlworaj -any,
        opmzrinbix-dwnjuztviv-lhnefavumr -any,
        sdmemwqaef-zvyohazcxc-tfrypmqjyq -any,
        gkjuhkyyqj-jozfvwcjya-gxibjpvgiy -any,
        stm-conduit -any,
        tasty -any,
        template-haskell -any,
        text -any,
        text-show -any,
        time -any,
        transformers -any,
        unliftio -any,
        unordered-containers -any,
        vector -any,
        wai -any,
        wai-extra -any,
        bartgulhih-fvuwxcitsk-foqrmqxrka -any,
        gqneousnmf-mnqkugguei-kcgvtbvdhv -any,
        gymqqiksln-ycqlesvmbu-mrzmpdrmlm -any,
        ihijfecmzj-ljxkhsaltz-tgoyvsagej -any,
        vbltcnoepb-bhzritxypd-erpaaootbj -any,
        warp -any,
        writer-cps-mtl -any,
        yaml -any,
        yesod -any,
        yesod-core -any,
        yesod-websockets -any

test-suite velsdhddvk-upqmgxlbja-dorectqwjq
    type:               exitcode-stdio-1.0
    main-is:            main.hs
    default-language:   Haskell2010
    default-extensions:
        CPP ConstraintKinds DataKinds DeriveDataTypeable DeriveGeneric
        DerivingStrategies DerivingVia EmptyDataDecls FlexibleContexts
        FlexibleInstances FunctionalDependencies GADTs
        GeneralizedNewtypeDeriving InstanceSigs LambdaCase
        MultiParamTypeClasses MultiWayIf NamedFieldPuns NoImplicitPrelude
        NoMonomorphismRestriction OverloadedStrings PackageImports
        PatternSynonyms QuasiQuotes RankNTypes RecordWildCards
        ScopedTypeVariables StandaloneDeriving TemplateHaskell
        TupleSections TypeApplications TypeFamilies TypeOperators
        ViewPatterns

    ghc-options:
        -Wall -fwarn-tabs -Wincomplete-uni-patterns -eventlog -O0 +RTS
        -A32M -RTS -threaded -rtsopts "-with-rtsopts=-N -T"

    build-depends:
        aeson -any,
        aeson-better-errors -any,
        base -any,
        base64-bytestring -any,
        blaze-markup -any,
        case-insensitive -any,
        casing -any,
        classy-prelude -any,
        clock -any,
        kdmjlflvld-otcdbxojlx-vvoxlaenkf -any,
        conduit -any,
        containers -any,
        cryptonite -any,
        data-default -any,
        dlist -any,
        either -any,
        ekg -any,
        ekg-core -any,
        xromcygenl-gojypjrqvs-nycfeqojfd -any,
        extra -any,
        fast-logger -any,
        file-embed -any,
        file-path-th -any,
        generic-lens -any,
        hspec -any,
        http-client -any,
        http-conduit -any,
        http-types -any,
        jose-jwt -any,
        kqavalspcl-mjxvabybcy-rqybkwxafh -any,
        rsncqgtwnb-gxwvbahrpd-quhadaaeis -any,
        lattices -any,
        lens -any,
        lens-aeson -any,
        ctinvzdtjm-hfchrxvxxm-gpgeiyxotj -any,
        memory -any,
        mime-mail -any,
        mmorph -any,
        monad-control -any,
        monad-logger -any,
        mtl -any,
        xtwihehity-ujcjqxvexa-mtrhiynzie -any,
        cykbpqjxqd-sblzneieby-ufuuzcgxxy -any,
        mustache -any,
        network -any,
        yqnzgbtjil-ajvkvudagy-yflacfcvwp -any,
        postgresql-config -any,
        postgresql-simple -any,
        servant -any,
        servant-client -any,
        servant-server -any,
        xmwnpwaspa-ifrscictqx-naqfoptqaq -any,
        blldacdoaq-nwjshzvehs-pernmdonjn -any,
        lbyeagpzai-mqklrvnslg-vtmfoaplrj -any,
        lklojpplmm-gahraeiacr-nburlworaj -any,
        opmzrinbix-dwnjuztviv-lhnefavumr -any,
        sdmemwqaef-zvyohazcxc-tfrypmqjyq -any,
        gkjuhkyyqj-jozfvwcjya-gxibjpvgiy -any,
        stm-conduit -any,
        template-haskell -any,
        text -any,
        text-show -any,
        time -any,
        transformers -any,
        unliftio -any,
        unordered-containers -any,
        vector -any,
        wai -any,
        wai-extra -any,
        bartgulhih-fvuwxcitsk-foqrmqxrka -any,
        gqneousnmf-mnqkugguei-kcgvtbvdhv -any,
        gymqqiksln-ycqlesvmbu-mrzmpdrmlm -any,
        ihijfecmzj-ljxkhsaltz-tgoyvsagej -any,
        vbltcnoepb-bhzritxypd-erpaaootbj -any,
        warp -any,
        writer-cps-mtl -any,
        yaml -any,
        yesod -any,
        yesod-core -any,
        yesod-websockets -any
