cabal-version: 1.12
name:          bibynmwkdi-aowoigbqpz-mmzeeodbzp
version:       0.0.0.0
license:       AllRightsReserved
build-type:    Simple

library
    default-language: Haskell2010
    ghc-options:
        -Wall -fwarn-tabs -Wincomplete-uni-patterns -eventlog -O0 +RTS
        -A32M -RTS

    build-depends:
        base -any,
        containers -any,
        qivxmeiywc-jecrjyijco-tprliqfsfi -any,
        irnnsxssyn-smvaxwghzf-nispjafufa -any,
        xmwnpwaspa-ifrscictqx-naqfoptqaq -any,
        rqfouaqhgm-nxvkrcadip-armiklgokp -any

executable eajbtabqwn-doumebeccf-itpwyqzikd
    main-is:          main.hs
    default-language: Haskell2010
    ghc-options:
        -Wall -fwarn-tabs -Wincomplete-uni-patterns -eventlog -O0 +RTS
        -A32M -RTS -threaded -rtsopts "-with-rtsopts=-N -T"

    build-depends:
        base -any,
        containers -any,
        qivxmeiywc-jecrjyijco-tprliqfsfi -any,
        bibynmwkdi-aowoigbqpz-mmzeeodbzp -any,
        irnnsxssyn-smvaxwghzf-nispjafufa -any,
        xmwnpwaspa-ifrscictqx-naqfoptqaq -any,
        rqfouaqhgm-nxvkrcadip-armiklgokp -any
